[WIP] Add SceneEditor built with React and PixiJS

--- a/newIDE/package.json
+++ b/newIDE/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "flat": "^2.0.1",
     "lodash": "^4.16.4",
+    "pixi-simple-gesture": "^0.2.2",
     "react": "^15.3.2",
     "react-addons-css-transition-group": "^15.3.2",
     "react-dom": "^15.3.2",
