[WIP] Add electron support to the new IDE and WIP bridge to an external editor

--- a/newIDE/package.json
+++ b/newIDE/package.json
@@ -2,6 +2,7 @@
   "name": "newIDE",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "devDependencies": {
     "react-scripts": "0.6.1"
   },
