Expose PanelSpriteObject to Emscripten build

--- a/Extensions/CMakeLists.txt
+++ b/Extensions/CMakeLists.txt
@@ -27,7 +27,9 @@ IF (NOT EMSCRIPTEN)
 	ADD_SUBDIRECTORY(LinkedObjects)
 	ADD_SUBDIRECTORY(Network)
 	ADD_SUBDIRECTORY(ParticleSystem)
-	ADD_SUBDIRECTORY(PanelSpriteObject)
+ENDIF()
+ADD_SUBDIRECTORY(PanelSpriteObject)
+IF (NOT EMSCRIPTEN)
 	ADD_SUBDIRECTORY(PathBehavior)
 	ADD_SUBDIRECTORY(PathfindingBehavior)
 	ADD_SUBDIRECTORY(PhysicsBehavior)
